fit_predictor/mkp_aco/evaluates/run15/2025-01-27_13-07-27/evaluations/problem_eval425493295007154030_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 4
    {n, m} = prize.shape
    ^^^^^^
SyntaxError: cannot assign to set display here. Maybe you meant '==' instead of '='?
